# 26_wuren_ChenXingyu

./: LICENSE  README.md  first.sh
CMake 1/: CMakeLists.txt
CMake 1/common/kalman/: CMakeLists.txt
CMake 1/common/math/: CMakeLists.txt
CMake 1/modules/A1/: CMakeLists.txt
CMake 1/modules/A2/: CMakeLists.txt
CMake 1/modules/M2/: CMakeLists.txt
Control/: readme.md
Control/作业1/: BycycleModel(python).txt  bicycle_models_problem.m  lane_follower(pythonCode).txt  lane_follower.m
Control/作业2/: code(python).txt
DL1/: First.ipynb  Second.ipynb  readme.md
homework/: README.md
homework/作业1/: salesman.ipynb
homework/作业2/: FIRST.ipynb  SECOND.ipynb
homework/作业3/: Untitled.ipynb
homework/作业4/: Kmeans_Exp.ipynb
linux_practice/backup/: daily_report.txt
thesis/: readme.md
